# loft-libs-core

./: .gitignore  LICENSE  README.md
.github/workflows/: library-ci.yml
arguments/: README.md  loft.toml
arguments/src/: arguments.loft
arguments/tests/: 01-arguments.loft
cbor/: .allow_warnings  loft.toml
cbor/src/: cbor.loft
cbor/tests/: cbor.loft
crypto/: .gitignore  LICENSE  README.md  loft.toml
crypto/native/: Cargo.toml  build.rs
crypto/native/src/: aes256gcm.rs  base64.rs  ed25519.rs  hkdf.rs  hpke_bytes.rs  lib.rs  random.rs  sha256.rs  x25519.rs
crypto/src/: crypto.loft
crypto/tests/: aead_kex.loft  crypto.loft  crypto_simple.loft  ed25519.loft  hpke.loft  primitives.loft  random.loft  sha256_bytes.loft
crypto/wasm/: Cargo.toml  host.js
crypto/wasm/src/: lib.rs
random/: README.md  loft.toml
random/docs/: 21-random.loft
random/native/: Cargo.toml  build.rs
random/native/src/: generated.rs  lib.rs
random/src/: random.loft
random/tests/: 15-random.loft  16-randstream.loft
regex/: README.md  loft.toml
regex/native/: Cargo.toml  build.rs
regex/native/src/: lib.rs
regex/src/: regex.loft
regex/tests/: auto_trigger.loft  groups_replace.loft  regex.loft
