[package]
name = "loft-crypto"
version = "0.1.0"
edition = "2024"
license = "LGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
loft-ffi = "0.1"
loft-ffi-macros = "0.1"

# Asymmetric / KDF / AEAD primitives — the vetted pure-Rust RustCrypto + dalek
# stack (no openssl / ring), so the cdylib cross-compiles without a C
# toolchain.  Minimal features: only `std` where it removes a `no_std` cost.

# Ed25519 (RFC 8032) signatures.  `from_bytes` + `sign` + `verify` need no RNG.
ed25519-dalek = { version = "2.1", default-features = false, features = ["std", "fast"] }

# X25519 (RFC 7748) Diffie-Hellman.  `StaticSecret::from(bytes)` +
# `diffie_hellman` need no RNG, so no rand_core feature.
x25519-dalek = { version = "2.0", default-features = false, features = ["static_secrets"] }

# HKDF-SHA256 (RFC 5869) key derivation.
hkdf = "0.12"
sha2 = "0.10"

# AES-256-GCM AEAD (RFC 5116 / NIST SP 800-38D).  `aes` software backend is
# pure Rust; `aead` brings the `Aead`/`Payload` traits.
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }

# OS CSPRNG for `random_bytes` — reads getrandom(2) / /dev/urandom etc.
getrandom = "0.2"

[build-dependencies]
loft-ffi-build = "0.2"

# Local override: build against loft2's in-tree loft-ffi crates so the cdylib's
# ABI fingerprint matches this loft binary (the published loft-ffi 0.1 on
# crates.io is older than loft2's bridge-migration loft-ffi). Mirrors the
# imaging fixture's pattern. Local-only — not for upstream commit.
[patch.crates-io]
loft-ffi       = { path = "/home/jurjens/workspace/loft2/loft-ffi" }
loft-ffi-macros = { path = "/home/jurjens/workspace/loft2/loft-ffi-macros" }
loft-ffi-build = { path = "/home/jurjens/workspace/loft2/loft-ffi-build" }
