[package]
name = "crypto-wasm"
version = "0.1.0"
edition = "2024"
license = "LGPL-3.0-or-later"
description = "Browser-WASM bridge for the crypto loft library — pub fn entry points called from generated --html standalone Rust binaries."

# rlib: the --html driver links this in via `--extern crypto_wasm=...` so
# generated code can call its `pub fn`s directly.  No cdylib (no dlopen in a
# browser).
[lib]
crate-type = ["rlib"]

# The loft crate provides `Stores` — the host-FFI surface this bridge's
# signature names.  Path-relative so the crate builds in-repo; the actual
# `--html` link is driven by rustc directly with `--extern loft=…` (see
# src/main.rs), not by this manifest.
[dependencies]
loft = { path = "../../../loft", default-features = false, features = ["random"] }
